__Projects/Data_Platform/GitOps/simple-k8s-go-app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-container
          image: rathoddharmendra/flask-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
