__Projects/Data_Platform/GitOps/simple-k8s-go-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
